Implemented manager signup and added Crashlytics

--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,26 @@ buildscript {
     repositories {
         google()
         jcenter()
+
+        // Add repository for Crashlytics
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0'
         classpath 'com.google.gms:google-services:4.0.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        // For Crashlytics
+        // Check for v3.1.2 or higher
+        classpath 'com.google.gms:google-services:4.1.0'
+
+        // Add dependency
+        classpath 'io.fabric.tools:gradle:1.25.4'
     }
 }
 
@@ -19,6 +32,11 @@ allprojects {
     repositories {
         google()
         jcenter()
+
+        // Add repository for Crashlytics
+        maven {
+            url 'https://maven.google.com/'
+        }
     }
 }
 
