--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
+apply plugin: 'io.fabric'
+
+
 
 android {
     compileSdkVersion 28
@@ -51,7 +54,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.4'
     // Firebase ads
     implementation 'com.google.firebase:firebase-ads:17.0.0'
+    // Firebase database
+    implementation 'com.google.firebase:firebase-database:16.0.3'
+    // Crashlytics
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
 
-    // Firebase JobDispatcher
-    implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
+    // ViewModel and LiveData
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+
 }
