Added IntentService for widget update

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,9 @@
                 android:resource="@xml/home_screen_widget_info" />
         </receiver>
 
+        <service android:name=".HomeScreenWidget$UpdateWidgetService" />
+
+
     </application>
 
 </manifest>
