--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,35 +31,40 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:animated-vector-drawable:28.0.0'
-    implementation 'com.android.support:customtabs:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    // Android support libraries
+    implementation "com.android.support:appcompat-v7:$rootProject.ext.supportLibraryVersion"
+    implementation "com.android.support:animated-vector-drawable:$rootProject.ext.supportLibraryVersion"
+    implementation "com.android.support:customtabs:$rootProject.ext.supportLibraryVersion"
+    implementation "com.android.support.constraint:constraint-layout:$rootProject.ext.constraintLayoutVersion"
+    implementation "com.android.support:support-v4:$rootProject.ext.supportLibraryVersion"
+    implementation "com.android.support:design:$rootProject.ext.supportLibraryVersion"
+    implementation "com.android.support:preference-v7:$rootProject.ext.supportLibraryVersion"
 
-    implementation 'com.android.support:preference-v7:28.0.0'
+    testImplementation "junit:junit:$rootProject.ext.junitVersion"
+    androidTestImplementation "com.android.support.test:runner:$rootProject.ext.testRunnerVersion"
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:$rootProject.ext.espressoCoreVersion"
 
     // customized BottomNavigation component
-    implementation 'com.aurelhubert:ahbottomnavigation:2.1.0'
+    implementation "com.aurelhubert:ahbottomnavigation:$rootProject.ext.ahBottomNavVersion"
 
     // NOTE: Always use latest versions of firebase to avoid gradle error
     // Firebase core
-    implementation 'com.google.firebase:firebase-core:16.0.4'
+    implementation "com.google.firebase:firebase-core:$rootProject.ext.firebaseCoreVersion"
     // Firebase authentication
-    implementation 'com.google.firebase:firebase-auth:16.0.4'
+    implementation "com.google.firebase:firebase-auth:$rootProject.ext.firebaseCoreVersion"
     // Firebase ads
-    implementation 'com.google.firebase:firebase-ads:17.0.0'
+    implementation "com.google.firebase:firebase-ads:$rootProject.ext.firebaseAdsVersion"
     // Firebase database
-    implementation 'com.google.firebase:firebase-database:16.0.3'
+    implementation "com.google.firebase:firebase-database:$rootProject.ext.firebaseDbVersion"
     // Crashlytics
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
+    implementation "com.crashlytics.sdk.android:crashlytics:$rootProject.ext.crashlyticsVersion"
 
     // ViewModel and LiveData
-    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation "android.arch.lifecycle:extensions:$rootProject.ext.lifecycleExtVersion"
+
+    // Glide
+    implementation "com.github.bumptech.glide:glide:$rootProject.ext.glideVersion"
+    annotationProcessor "com.github.bumptech.glide:compiler:$rootProject.ext.glideVersion"
 
 }
