--- a/build.gradle
+++ b/build.gradle
@@ -43,3 +43,19 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+
+ext {
+    supportLibraryVersion = '28.0.0'
+    constraintLayoutVersion = '1.1.3'
+    junitVersion = '4.12'
+    testRunnerVersion = '1.0.2'
+    espressoCoreVersion = '3.0.2'
+    ahBottomNavVersion = '2.1.0'
+    firebaseCoreVersion = '16.0.5'
+    firebaseAdsVersion = '17.1.0'
+    firebaseDbVersion = '16.0.4'
+    crashlyticsVersion = '2.9.6'
+    lifecycleExtVersion = '1.1.1'
+    glideVersion = '4.8.0'
+}
