--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,14 @@ apply plugin: 'io.fabric'
 
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'udacity'
+            keyPassword 'password'
+            storeFile file("$rootDir/keystore.jks")
+            storePassword 'password'
+        }
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.malkoti.capstone.mycommunity"
@@ -19,6 +27,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
 
@@ -40,7 +49,6 @@ dependencies {
     implementation "com.android.support:support-v4:$rootProject.ext.supportLibraryVersion"
     implementation "com.android.support:design:$rootProject.ext.supportLibraryVersion"
     implementation "com.android.support:preference-v7:$rootProject.ext.supportLibraryVersion"
-
     testImplementation "junit:junit:$rootProject.ext.junitVersion"
     androidTestImplementation "com.android.support.test:runner:$rootProject.ext.testRunnerVersion"
     androidTestImplementation "com.android.support.test.espresso:espresso-core:$rootProject.ext.espressoCoreVersion"
@@ -49,14 +57,19 @@ dependencies {
     implementation "com.aurelhubert:ahbottomnavigation:$rootProject.ext.ahBottomNavVersion"
 
     // NOTE: Always use latest versions of firebase to avoid gradle error
+
     // Firebase core
     implementation "com.google.firebase:firebase-core:$rootProject.ext.firebaseCoreVersion"
+
     // Firebase authentication
     implementation "com.google.firebase:firebase-auth:$rootProject.ext.firebaseCoreVersion"
+
     // Firebase ads
     implementation "com.google.firebase:firebase-ads:$rootProject.ext.firebaseAdsVersion"
+
     // Firebase database
     implementation "com.google.firebase:firebase-database:$rootProject.ext.firebaseDbVersion"
+
     // Crashlytics
     implementation "com.crashlytics.sdk.android:crashlytics:$rootProject.ext.crashlyticsVersion"
 
@@ -66,5 +79,4 @@ dependencies {
     // Glide
     implementation "com.github.bumptech.glide:glide:$rootProject.ext.glideVersion"
     annotationProcessor "com.github.bumptech.glide:compiler:$rootProject.ext.glideVersion"
-
 }
